Sat Jan 19 17:40:00 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	* src/m_cpu.c (m_nop): Code reformat.

Sun Jan 13 18:23:06 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* area.c, area.h, asm.c, code.c, code.h, decode.c, decode.h, depend.c,
	depend.h, directive_data.c, directive_file.c, directive_misc.c,
	directive_storagemap.c, directive_symbol.c, error.c, error.h, eval.c,
	eval.h, expr.c, expr.h, filename.c, filestack.c, fix.c, fix.h, frame.c,
	get.c, get.h, help_cop.c, help_cop.h, help_cpu.c, help_cpu.h,
	include.c, input.c, input.h, it.c, lex.c, lex.h, lit.c, local.c,
	macros.c, main.c, m_cop.c, m_copmem.c, m_cpu.c, m_cpuctrl.c,
	m_cpumem.c, m_fpe.c, opt.c, option.c, option.h, os.c, os.h, output.c,
	put.c, put.h, reloc.c, reloc.h, symbol.c, symbol.h, targetcpu.c,
	value.c, value.h, variables.c, whileif.c: Consistent casing of public
	routines.

Sun Jan  6 19:54:37 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	* src/macros.c (c_macro): Turn warning into error so that it appears
	during pass one.
	* src/variables.c (c_set): ValueTag determination and end-of-keyword
	check needs to happen before label presence test.
	* unittests/compare/core/variables.s: Add test case.

Sun Jan  6 19:16:03 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* m_cpu.c (m_nop): Don't warn twice about narrow width specifier in
	ARM mode.
	* directive_data.c (c_dci): Beautify.
	* macros.c (Macro_Find): Fix suffix wildcard test.
	(c_macro): Fix test on previous (possibly eclipsing) macro definition.

	* unittests/compare/core/macro_args.s: Add test case.

Sat Dec 15 20:39:32 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* area.h (Area): Add fileName, lineNumber fields.
	* area.c (Area_Create): Initialise Area::fileName, Area::lineNumber.
	(Area_PrepareForPhase): Add check number of relocs before suggesting
	NOINIT.
	* symbol.h (Symbol): Add aligned, visibility fields.
	* symbol.c (Symbol_New): Initialise Symbol::aligned, Symbol::visibility.